:construction: Setup GitHub repository and actions
usethis::use_github()
usethis::use_github_action_check_standard()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,3 +24,5 @@ Imports:
     wtl
 Remotes:
     wtl=heavywatal/rwtl
+URL: https://github.com/heavywatal/safr
+BugReports: https://github.com/heavywatal/safr/issues
