--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,28 +2,28 @@ Package: safr
 Title: Summarize and Visualize Sequence Alignment Format Data
 Version: 0.0.0.9000
 Authors@R:
-    person("Watal M.", "Iwasaki", email = "heavywatal@gmail.com",
-           role = c("aut", "cre"), comment = c(ORCID = "0000-0002-4718-7605"))
+    person("Watal M.", "Iwasaki", , "heavywatal@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-4718-7605"))
 Description: Reads various formats of sequence alignment/mapping data to
     summmarize and visualize them.
 License: MIT + file LICENSE
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
-Suggests:
-    testthat (>= 3.0.0),
-    withr
-Config/testthat/edition: 3
+URL: https://github.com/heavywatal/safr
+BugReports: https://github.com/heavywatal/safr/issues
 Imports:
-    dplyr,
     IRanges,
+    dplyr,
     purrr,
     readr,
     rlang,
     stringr,
     tidyr,
     wtl
+Suggests:
+    testthat (>= 3.2.1),
+    withr
 Remotes:
     wtl=heavywatal/rwtl
-URL: https://github.com/heavywatal/safr
-BugReports: https://github.com/heavywatal/safr/issues
+Config/testthat/edition: 3
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
