:sparkles: Create plot_dot()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,14 @@ S3method(as_paf,tbl_chain)
 S3method(as_paf,tbl_net)
 S3method(as_paf,tbl_singmaf)
 export(as_paf)
+export(facet_grid_chr)
+export(plot_dot)
 export(read_axt)
 export(read_chain)
 export(read_net)
 export(read_paf)
 export(read_singmaf)
+export(theme_dotplot)
 export(write_paf)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
